--- a/MoneyLink Website/index.HTML
+++ b/MoneyLink Website/index.HTML
@@ -136,7 +136,9 @@
 
 <div id="contact" class="tab">
   <h2>📞 Contact Us</h2>
-  <form>
+  <form> action="https://formspree.io/f/mwpqrzrz" method="POST">
+<input type="hidden" name="_captcha" value="false">
+<input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html">
     <label>Full Name:</label>
     <input type="text" required />
     <label>Email Address:</label>
@@ -158,3 +160,4 @@
 
 </body>
 </html>
+
